k8s/certmng/proxy_nms_pods.yml
apiVersion: v1
kind: Service
metadata:
  name: nms
spec:
  ports:
    - name: http 
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: nms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nms
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nms
    spec:
      containers:
        - name: nms-pod
          image: monitorsystemall/nginx
          volumeMounts:
            - name: let-volume
              mountPath: /etc/letsencrypt
            - name: nix-volume
              mountPath: /etc/nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              memory: 4096Mi
              cpu: 2
      volumes:
        - name: let-volume
          nfs:
            server: 192.168.88.143
            path: /proxy/letsencrypt
        - name: nix-volume
          nfs:
            server: 192.168.88.143
            path: /proxy/nginx
