k8s/certmng/nms_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nms-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
      #  nginx.org/ssl-services: "ssl-svc"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
      #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
      #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  
  ingressClassName: nginx
  tls:
  - secretName: nms-tls
    hosts:         
     - "*.nms.com.vn"
     - "nms.com.vn"  
  rules:
  - host: '*.nms.com.vn'
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nms
              port:
                number: 80
  - host: 'nms.com.vn'
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nms
              port:
                number: 80
